k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heart-disease-app-service
  labels:
    app: heart-disease-app
spec:
  type: LoadBalancer
  selector:
    app: heart-disease-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    name: http
